# social-media-data-scraping

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/config/: config.yaml
src/config/save/: main.yaml  main_save.yaml  temp_save.yaml
src/config/scraper/: reddit.yaml  twitter.yaml
src/data/: data_generator.py  reddit_processor.py  tweet_processor.py
src/scrapers/reddit/: reddit_scraper.py
src/scrapers/reddit/subreddit/: subreddit_queries.txt  subreddit_scraper.py
src/scrapers/twitter/: twitter_scraper.py
src/scrapers/twitter/queries/search/: search_queries.txt  twitter_search_scraper.py
